# ranger_librarian_gui

./: .gitignore  CMakeLists.txt  package.xml
include/ranger_librarian_gui/: main_window.hpp  qnode.hpp  ratio_layouted_frame.hpp  utils.hpp
src/: label_reader.cpp  main.cpp  main_window.cpp  qnode.cpp  ratio_layouted_frame.cpp  utils.cpp
ui/: main_window.ui
