<?xml version="1.0"?>
<package>
  <name>ranger_librarian_gui</name>
  <version>0.1.0</version>
  <description>

     ranger_librarian_gui

  </description>
  <maintainer email="Donatas@gmail.com">Donatas</maintainer>
  <author>Donatas</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ranger_librarian</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>


  <run_depend>qt_build</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ranger_librarian</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
 
</package>
